// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/progress/demo/circle.md correctly 1`] = `
<div>
  <div
    class="wmstool-progress wmstool-progress-circle wmstool-progress-status-normal wmstool-progress-show-info wmstool-progress-default"
  >
    <div
      class="wmstool-progress-inner"
      style="width:120px;height:120px;font-size:24px"
    >
      <svg
        class="wmstool-progress-circle "
        viewBox="0 0 100 100"
      >
        <path
          class="wmstool-progress-circle-trail"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#f3f3f3"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s"
        />
        <path
          class="wmstool-progress-circle-path"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#108ee9"
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:221.48228207808043px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s"
        />
      </svg>
      <span
        class="wmstool-progress-text"
      >
        75%
      </span>
    </div>
  </div>
  <div
    class="wmstool-progress wmstool-progress-circle wmstool-progress-status-exception wmstool-progress-show-info wmstool-progress-default"
  >
    <div
      class="wmstool-progress-inner"
      style="width:120px;height:120px;font-size:24px"
    >
      <svg
        class="wmstool-progress-circle "
        viewBox="0 0 100 100"
      >
        <path
          class="wmstool-progress-circle-trail"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#f3f3f3"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s"
        />
        <path
          class="wmstool-progress-circle-path"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#ff5500"
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:206.7167966062084px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s"
        />
      </svg>
      <span
        class="wmstool-progress-text"
      >
        <i
          class="anticon anticon-cross"
        />
      </span>
    </div>
  </div>
  <div
    class="wmstool-progress wmstool-progress-circle wmstool-progress-status-success wmstool-progress-show-info wmstool-progress-default"
  >
    <div
      class="wmstool-progress-inner"
      style="width:120px;height:120px;font-size:24px"
    >
      <svg
        class="wmstool-progress-circle "
        viewBox="0 0 100 100"
      >
        <path
          class="wmstool-progress-circle-trail"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#f3f3f3"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s"
        />
        <path
          class="wmstool-progress-circle-path"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#87d068"
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s"
        />
      </svg>
      <span
        class="wmstool-progress-text"
      >
        <i
          class="anticon anticon-check"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`renders ./components/progress/demo/circle-dynamic.md correctly 1`] = `
<div>
  <div
    class="wmstool-progress wmstool-progress-circle wmstool-progress-status-normal wmstool-progress-show-info wmstool-progress-default"
  >
    <div
      class="wmstool-progress-inner"
      style="width:120px;height:120px;font-size:24px"
    >
      <svg
        class="wmstool-progress-circle "
        viewBox="0 0 100 100"
      >
        <path
          class="wmstool-progress-circle-trail"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#f3f3f3"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s"
        />
        <path
          class="wmstool-progress-circle-path"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#108ee9"
          stroke-linecap="round"
          stroke-width="0"
          style="stroke-dasharray:0px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s"
        />
      </svg>
      <span
        class="wmstool-progress-text"
      >
        0%
      </span>
    </div>
  </div>
  <div
    class="wmstool-btn-group"
  >
    <button
      class="wmstool-btn wmstool-btn-icon-only"
      type="button"
    >
      <i
        class="anticon anticon-minus"
      />
    </button>
    <button
      class="wmstool-btn wmstool-btn-icon-only"
      type="button"
    >
      <i
        class="anticon anticon-plus"
      />
    </button>
  </div>
</div>
`;

exports[`renders ./components/progress/demo/circle-mini.md correctly 1`] = `
<div>
  <div
    class="wmstool-progress wmstool-progress-circle wmstool-progress-status-normal wmstool-progress-show-info wmstool-progress-default"
  >
    <div
      class="wmstool-progress-inner"
      style="width:80px;height:80px;font-size:18px"
    >
      <svg
        class="wmstool-progress-circle "
        viewBox="0 0 100 100"
      >
        <path
          class="wmstool-progress-circle-trail"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#f3f3f3"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s"
        />
        <path
          class="wmstool-progress-circle-path"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#108ee9"
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:88.59291283123217px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s"
        />
      </svg>
      <span
        class="wmstool-progress-text"
      >
        30%
      </span>
    </div>
  </div>
  <div
    class="wmstool-progress wmstool-progress-circle wmstool-progress-status-exception wmstool-progress-show-info wmstool-progress-default"
  >
    <div
      class="wmstool-progress-inner"
      style="width:80px;height:80px;font-size:18px"
    >
      <svg
        class="wmstool-progress-circle "
        viewBox="0 0 100 100"
      >
        <path
          class="wmstool-progress-circle-trail"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#f3f3f3"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s"
        />
        <path
          class="wmstool-progress-circle-path"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#ff5500"
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:206.7167966062084px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s"
        />
      </svg>
      <span
        class="wmstool-progress-text"
      >
        <i
          class="anticon anticon-cross"
        />
      </span>
    </div>
  </div>
  <div
    class="wmstool-progress wmstool-progress-circle wmstool-progress-status-success wmstool-progress-show-info wmstool-progress-default"
  >
    <div
      class="wmstool-progress-inner"
      style="width:80px;height:80px;font-size:18px"
    >
      <svg
        class="wmstool-progress-circle "
        viewBox="0 0 100 100"
      >
        <path
          class="wmstool-progress-circle-trail"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#f3f3f3"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s"
        />
        <path
          class="wmstool-progress-circle-path"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#87d068"
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s"
        />
      </svg>
      <span
        class="wmstool-progress-text"
      >
        <i
          class="anticon anticon-check"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`renders ./components/progress/demo/dashboard.md correctly 1`] = `
<div
  class="wmstool-progress wmstool-progress-circle wmstool-progress-status-normal wmstool-progress-show-info wmstool-progress-default"
>
  <div
    class="wmstool-progress-inner"
    style="width:120px;height:120px;font-size:24px"
  >
    <svg
      class="wmstool-progress-circle "
      viewBox="0 0 100 100"
    >
      <path
        class="wmstool-progress-circle-trail"
        d="M 50,50 m 0,47
     a 47,47 0 1 1 0,-94
     a 47,47 0 1 1 0,94"
        fill-opacity="0"
        stroke="#f3f3f3"
        stroke-width="6"
        style="stroke-dasharray:220.30970943744057px 295.3097094374406px;stroke-dashoffset:-37.5px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s"
      />
      <path
        class="wmstool-progress-circle-path"
        d="M 50,50 m 0,47
     a 47,47 0 1 1 0,-94
     a 47,47 0 1 1 0,94"
        fill-opacity="0"
        stroke="#108ee9"
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray:165.23228207808043px 295.3097094374406px;stroke-dashoffset:-37.5px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s"
      />
    </svg>
    <span
      class="wmstool-progress-text"
    >
      75%
    </span>
  </div>
</div>
`;

exports[`renders ./components/progress/demo/dynamic.md correctly 1`] = `
<div>
  <div
    class="wmstool-progress wmstool-progress-line wmstool-progress-status-normal wmstool-progress-show-info wmstool-progress-default"
  >
    <div>
      <div
        class="wmstool-progress-outer"
      >
        <div
          class="wmstool-progress-inner"
        >
          <div
            class="wmstool-progress-bg"
            style="width:0%;height:8px"
          />
        </div>
      </div>
      <span
        class="wmstool-progress-text"
      >
        0%
      </span>
    </div>
  </div>
  <div
    class="wmstool-btn-group"
  >
    <button
      class="wmstool-btn wmstool-btn-icon-only"
      type="button"
    >
      <i
        class="anticon anticon-minus"
      />
    </button>
    <button
      class="wmstool-btn wmstool-btn-icon-only"
      type="button"
    >
      <i
        class="anticon anticon-plus"
      />
    </button>
  </div>
</div>
`;

exports[`renders ./components/progress/demo/format.md correctly 1`] = `
<div>
  <div
    class="wmstool-progress wmstool-progress-circle wmstool-progress-status-normal wmstool-progress-show-info wmstool-progress-default"
  >
    <div
      class="wmstool-progress-inner"
      style="width:120px;height:120px;font-size:24px"
    >
      <svg
        class="wmstool-progress-circle "
        viewBox="0 0 100 100"
      >
        <path
          class="wmstool-progress-circle-trail"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#f3f3f3"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s"
        />
        <path
          class="wmstool-progress-circle-path"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#108ee9"
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:221.48228207808043px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s"
        />
      </svg>
      <span
        class="wmstool-progress-text"
      >
        75 Days
      </span>
    </div>
  </div>
  <div
    class="wmstool-progress wmstool-progress-circle wmstool-progress-status-success wmstool-progress-show-info wmstool-progress-default"
  >
    <div
      class="wmstool-progress-inner"
      style="width:120px;height:120px;font-size:24px"
    >
      <svg
        class="wmstool-progress-circle "
        viewBox="0 0 100 100"
      >
        <path
          class="wmstool-progress-circle-trail"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#f3f3f3"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s"
        />
        <path
          class="wmstool-progress-circle-path"
          d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
          fill-opacity="0"
          stroke="#87d068"
          stroke-linecap="round"
          stroke-width="6"
          style="stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s"
        />
      </svg>
      <span
        class="wmstool-progress-text"
      >
        Done
      </span>
    </div>
  </div>
</div>
`;

exports[`renders ./components/progress/demo/line.md correctly 1`] = `
<div>
  <div
    class="wmstool-progress wmstool-progress-line wmstool-progress-status-normal wmstool-progress-show-info wmstool-progress-default"
  >
    <div>
      <div
        class="wmstool-progress-outer"
      >
        <div
          class="wmstool-progress-inner"
        >
          <div
            class="wmstool-progress-bg"
            style="width:30%;height:8px"
          />
        </div>
      </div>
      <span
        class="wmstool-progress-text"
      >
        30%
      </span>
    </div>
  </div>
  <div
    class="wmstool-progress wmstool-progress-line wmstool-progress-status-active wmstool-progress-show-info wmstool-progress-default"
  >
    <div>
      <div
        class="wmstool-progress-outer"
      >
        <div
          class="wmstool-progress-inner"
        >
          <div
            class="wmstool-progress-bg"
            style="width:50%;height:8px"
          />
        </div>
      </div>
      <span
        class="wmstool-progress-text"
      >
        50%
      </span>
    </div>
  </div>
  <div
    class="wmstool-progress wmstool-progress-line wmstool-progress-status-exception wmstool-progress-show-info wmstool-progress-default"
  >
    <div>
      <div
        class="wmstool-progress-outer"
      >
        <div
          class="wmstool-progress-inner"
        >
          <div
            class="wmstool-progress-bg"
            style="width:70%;height:8px"
          />
        </div>
      </div>
      <span
        class="wmstool-progress-text"
      >
        <i
          class="anticon anticon-cross-circle"
        />
      </span>
    </div>
  </div>
  <div
    class="wmstool-progress wmstool-progress-line wmstool-progress-status-success wmstool-progress-show-info wmstool-progress-default"
  >
    <div>
      <div
        class="wmstool-progress-outer"
      >
        <div
          class="wmstool-progress-inner"
        >
          <div
            class="wmstool-progress-bg"
            style="width:100%;height:8px"
          />
        </div>
      </div>
      <span
        class="wmstool-progress-text"
      >
        <i
          class="anticon anticon-check-circle"
        />
      </span>
    </div>
  </div>
  <div
    class="wmstool-progress wmstool-progress-line wmstool-progress-status-normal wmstool-progress-default"
  >
    <div>
      <div
        class="wmstool-progress-outer"
      >
        <div
          class="wmstool-progress-inner"
        >
          <div
            class="wmstool-progress-bg"
            style="width:50%;height:8px"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/progress/demo/line-mini.md correctly 1`] = `
<div
  style="width:170px"
>
  <div
    class="wmstool-progress wmstool-progress-line wmstool-progress-status-normal wmstool-progress-show-info wmstool-progress-small"
  >
    <div>
      <div
        class="wmstool-progress-outer"
      >
        <div
          class="wmstool-progress-inner"
        >
          <div
            class="wmstool-progress-bg"
            style="width:30%;height:6px"
          />
        </div>
      </div>
      <span
        class="wmstool-progress-text"
      >
        30%
      </span>
    </div>
  </div>
  <div
    class="wmstool-progress wmstool-progress-line wmstool-progress-status-active wmstool-progress-show-info wmstool-progress-small"
  >
    <div>
      <div
        class="wmstool-progress-outer"
      >
        <div
          class="wmstool-progress-inner"
        >
          <div
            class="wmstool-progress-bg"
            style="width:50%;height:6px"
          />
        </div>
      </div>
      <span
        class="wmstool-progress-text"
      >
        50%
      </span>
    </div>
  </div>
  <div
    class="wmstool-progress wmstool-progress-line wmstool-progress-status-exception wmstool-progress-show-info wmstool-progress-small"
  >
    <div>
      <div
        class="wmstool-progress-outer"
      >
        <div
          class="wmstool-progress-inner"
        >
          <div
            class="wmstool-progress-bg"
            style="width:70%;height:6px"
          />
        </div>
      </div>
      <span
        class="wmstool-progress-text"
      >
        <i
          class="anticon anticon-cross-circle"
        />
      </span>
    </div>
  </div>
  <div
    class="wmstool-progress wmstool-progress-line wmstool-progress-status-success wmstool-progress-show-info wmstool-progress-small"
  >
    <div>
      <div
        class="wmstool-progress-outer"
      >
        <div
          class="wmstool-progress-inner"
        >
          <div
            class="wmstool-progress-bg"
            style="width:100%;height:6px"
          />
        </div>
      </div>
      <span
        class="wmstool-progress-text"
      >
        <i
          class="anticon anticon-check-circle"
        />
      </span>
    </div>
  </div>
</div>
`;
